--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.15",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-safe-area-context": "^5.5.1"
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-pager-view": "^6.8.1",
+    "react-native-reanimated": "^3.17.4",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
