--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dragondo",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -16,7 +18,10 @@
     "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
     "expo": "~53.0.15",
+    "expo-device": "~7.1.4",
+    "expo-notifications": "~0.31.3",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~13.1.6",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
@@ -29,7 +34,12 @@
     "react-native-tab-view": "^4.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-jsdoc": "^51.3.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-native": "^5.0.0"
   },
   "private": true
 }
